--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
